--- a/EasyLearn/UI/CustomControls/Relations/ShadowCommonRelationView.xaml
+++ b/EasyLearn/UI/CustomControls/Relations/ShadowCommonRelationView.xaml
@@ -7,7 +7,7 @@
              xmlns:local="clr-namespace:EasyLearn.UI.CustomControls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Border Height="74" Width="200" 
+    <Border Height="78" Width="200" 
             Margin="13 13 0 0"
             VerticalAlignment="Top"
             Padding="0"
@@ -36,6 +36,9 @@
                         </Trigger>
                         <Trigger Property="IsMouseOver" Value="False">
                             <Setter Property="Background" Value="{DynamicResource EasyGrayLight}"/>
+                        </Trigger>
+                        <Trigger Property="IsPressed" Value="True">
+                            <Setter Property="Background" Value="{DynamicResource MainColorLight}"/>
                         </Trigger>
                     </Style.Triggers>
                 </Style>
