--- a/EasyLearn/UI/CustomControls/Relations/VerbPrepositionView.xaml
+++ b/EasyLearn/UI/CustomControls/Relations/VerbPrepositionView.xaml
@@ -38,24 +38,21 @@
                            d:Text="on"/>
             </StackPanel>
 
-            <!--<Border BorderBrush="{DynamicResource EasyGray}" 
-                    BorderThickness="0.5"
-                    Margin="0 0.3 0 0"
-                    Grid.Row="1"/>-->
 
             <ProgressBar Grid.Row="1"
                          Grid.ColumnSpan="3"
                          VerticalAlignment="Bottom" 
-                         Height="3"
-                         Background="{DynamicResource EastGrayLight}"
+                         Height="4"
+                         BorderThickness="0.3"
+                         Background="{Binding RatingProgressBarBackgroundColor}"
                          Foreground="{Binding RatingProgressBarColor}"
+                         BorderBrush="{Binding RatingProgressBarBackgroundColor}"
                          Value="{Binding RatingValue}"
-                         BorderBrush="{DynamicResource EasyGray}"
                          Maximum="100"/>
 
             <Grid Width="Auto" Grid.Row="2" Margin="10 8 10 0" VerticalAlignment="Center" 
                   HorizontalAlignment="Center" Grid.ColumnSpan="3">
-                <Border Grid.Row="1" Background="{DynamicResource EasyWhite}" CornerRadius="15" Height="30"></Border>
+                <Border Grid.Row="1" Background="{DynamicResource RelationLabelBackground}" CornerRadius="15" Height="30"></Border>
                 <Border Background="{DynamicResource MainColor}"  CornerRadius="15" Height="30" Width="85" HorizontalAlignment="Left">
                     <TextBlock Text="Перевод" FontSize="13" 
                            FontFamily="Arial" FontWeight="Bold"
@@ -69,7 +66,7 @@
             <Grid Width="Auto" Margin="10 7 10 0" Grid.Row="3" VerticalAlignment="Center" 
                   HorizontalAlignment="Center" Grid.ColumnSpan="3"
                   Visibility="{Binding IsFirstExampleVisible, Converter={converters:ReverseCollapseConverter}}">
-                <Border Grid.Row="1" Background="{DynamicResource EasyWhite}" CornerRadius="15" Height="45"></Border>
+                <Border Grid.Row="1" Background="{DynamicResource RelationLabelBackground}" CornerRadius="15" Height="45"></Border>
                 <Border Background="{DynamicResource MainColor}"  CornerRadius="15" Height="45" Width="80" HorizontalAlignment="Left">
                     <TextBlock Text="Пример" FontSize="13" 
                            FontFamily="Arial" FontWeight="Bold"
@@ -89,7 +86,7 @@
             <Grid Width="Auto" Margin="10 7 10 0" Grid.Row="4" VerticalAlignment="Center" 
                   HorizontalAlignment="Center" Grid.ColumnSpan="3"
                   Visibility="{Binding IsSecondExampleVisible, Converter={converters:ReverseCollapseConverter}}">
-                <Border Grid.Row="1" Background="{DynamicResource EasyWhite}" CornerRadius="15" Height="45"></Border>
+                <Border Grid.Row="1" Background="{DynamicResource RelationLabelBackground}" CornerRadius="15" Height="45"></Border>
                 <Border Background="{DynamicResource MainColor}"  CornerRadius="15" Height="45" Width="80" HorizontalAlignment="Left">
                     <TextBlock Text="Пример" FontSize="13" 
                            FontFamily="Arial" FontWeight="Bold"
@@ -108,7 +105,7 @@
             <Button Style="{DynamicResource MaterialDesignFlatButton}"
                     HorizontalAlignment="Right"
                     VerticalAlignment="Top"
-                    Foreground="{DynamicResource EasyGrayDark}"
+                    Foreground="{DynamicResource EasyGray}"
                     Width="18"
                     Height="18"
                     Padding="1"
