--- a/EasyLearn/UI/Pages/DictionariesPage.xaml
+++ b/EasyLearn/UI/Pages/DictionariesPage.xaml
@@ -12,7 +12,7 @@
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800">
 
-    <materialDesign:DialogHost>
+    <materialDesign:DialogHost OverlayBackground="{DynamicResource MainColorSuperDark}">
         <Grid>
             <ItemsControl ItemsSource="{Binding DictionaryViews}" 
                   VerticalContentAlignment="Top"
@@ -42,30 +42,6 @@
                                     <Binding.ValidationRules>
                                         <validation:NotEmpty Group="AddNewDictionary" ValidatesOnTargetUpdated="True"/>
                                         <validation:InRange Max="{x:Static constants:ModelConstants.DictionaryNameMaxLength}" Group="AddNewDictionary" ValidatesOnTargetUpdated="True"/>
-                                    </Binding.ValidationRules>
-                                </Binding>
-                            </TextBox.Text>
-
-                            <i:Interaction.Triggers>
-                                <i:EventTrigger EventName="TextChanged">
-                                    <i:InvokeCommandAction Command="{Binding UpdateConfirmDictionaryAddingButtonAvailabilityCommand}"/>
-                                </i:EventTrigger>
-                            </i:Interaction.Triggers>
-
-                        </TextBox>
-
-                        <!--Описание списка слов-->
-                        <TextBox Width="202"
-                                 Padding="14 11"
-                                 materialDesign:HintAssist.Hint="Описание"
-                                 materialDesign:HintAssist.IsFloating="False" 
-                                  materialDesign:ValidationAssist.Suppress="True"
-                                 Style="{DynamicResource EasyTextArea}">
-
-                            <TextBox.Text>
-                                <Binding Path="AddingWindowDictionaryDescriptionValue" UpdateSourceTrigger="PropertyChanged" Mode="TwoWay">
-                                    <Binding.ValidationRules>
-                                        <validation:InRange Max="{x:Static constants:ModelConstants.DictionaryDescriptionMaxLength}" Group="AddNewDictionary" ValidatesOnTargetUpdated="True"/>
                                     </Binding.ValidationRules>
                                 </Binding>
                             </TextBox.Text>
