--- a/EasyLearn/UI/Pages/UsersPage.xaml
+++ b/EasyLearn/UI/Pages/UsersPage.xaml
@@ -11,7 +11,7 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="AccountsPage">
 
-    <materialDesign:DialogHost>
+    <materialDesign:DialogHost OverlayBackground="{DynamicResource MainColorSuperDark}">
         <Grid>
 
             <ItemsControl ItemsSource="{Binding UserViews}" 
