--- a/EasyLearn/UI/Resourses/Colors.xaml
+++ b/EasyLearn/UI/Resourses/Colors.xaml
@@ -23,10 +23,9 @@
 
     <SolidColorBrush x:Key="EasyWhite" Color="#ffffff"/>
 
-    <SolidColorBrush x:Key="EasyBlack" Color="Black"/>
+    <SolidColorBrush x:Key="EasyBlack" Color="#262626"/>
 
     <SolidColorBrush x:Key="EasyGold" Color="Gold"/>
-
 
     <LinearGradientBrush x:Key="ButtonBackgroundGray" StartPoint="0.5,1" EndPoint="0.5,0">
         <GradientStop Color="#f4f4f4" Offset="1" />
@@ -38,5 +37,7 @@
         <GradientStop Color="#e9e9e9" Offset="0.5" />
         <GradientStop Color="#e9e9e9" Offset="0" />
     </LinearGradientBrush>
-    
+
+    <SolidColorBrush x:Key="RelationLabelBackground" Color="#e7e7e7"/>
+
 </ResourceDictionary>
