--- a/EasyLearn/UI/Resourses/Styles.xaml
+++ b/EasyLearn/UI/Resourses/Styles.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes">
 
     <Style x:Key="EasyButton" TargetType="Button">
         <Setter Property="Template">
@@ -47,7 +48,7 @@
         <Setter Property="Margin" Value="0 0 7 0"/>
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Button.Background" Value="{DynamicResource EasyRedDark}"/>
+                <Setter Property="Button.Background" Value="{DynamicResource EasyRed}"/>
             </Trigger>
             <Trigger Property="IsPressed" Value="True">
                 <Setter Property="Button.Background" Value="{DynamicResource EasyRedLight}"/>
@@ -63,7 +64,7 @@
         <Setter Property="Margin" Value="7 0 0 0"/>
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Button.Background" Value="{DynamicResource EasyGreenDark}"/>
+                <Setter Property="Button.Background" Value="{DynamicResource EasyGreen}"/>
             </Trigger>
             <Trigger Property="IsPressed" Value="True">
                 <Setter Property="Button.Background" Value="{DynamicResource EasyGreenLight}"/>
@@ -106,6 +107,29 @@
         </Style.Triggers>
     </Style>
 
+    <Style x:Key="LittleCircleButton" TargetType="Button">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate>
+                    <Border Height="18" Background="#a6a6a6" Width="18" CornerRadius="9" BorderThickness="1.5" BorderBrush="{TemplateBinding BorderBrush}">
+
+                        <materialDesign:PackIcon VerticalAlignment="Center" HorizontalAlignment="Center" Kind="Close" Height="14" Width="14" Foreground="White"/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Setter Property="HorizontalAlignment" Value="Right"/>
+        <Setter Property="Panel.ZIndex" Value="10"/>
+        <Setter Property="Margin" Value="0 0 8 0"/>
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="BorderBrush" Value="{StaticResource MainColor}"/>
+            </Trigger>
+            <Trigger Property="IsMouseOver" Value="False">
+                <Setter Property="BorderBrush" Value="Transparent"/>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
 
     <Style x:Key="EasyTextBox" TargetType="TextBox" BasedOn="{StaticResource EasyTextBoxBase}">
         <Style.Triggers>
